# ClaudeLearn

./: .gitignore  .mcp.json  README.md
AnalysisDoc/: GESP-6-202509-ans.md
Calculator/: .github_issue.md  .github_pr.md  CMakeLists.txt  README.md
Calculator/include/: Calculator.h
Calculator/src/: Calculator.cpp
Calculator/tests/: test_calculator.cpp
Course/: 01-继承和多态-课件.md  02-代码示例.cpp  03-武器系统完整代码.cpp  04-综合实践-任务说明.md  05-综合实践-学生版.cpp  06-综合实践-参考答案.cpp  test  课程提纲-继承和多态.md
Generator/: exam-ans.md  exam.md
Labs/: README.md  answer.cpp  answer_challenge.cpp  answer_simple.cpp  chess_position.cpp  chess_position_extended.cpp  list.md  循环编程题目.md  棋盘定位题目.md
Labs/IO重定向/: answer.cpp  guide.md  submit.cpp
Labs/STL_String类实现/: answer.cpp  guide.md  submit.cpp
Labs/STL应用/: answer.cpp  guide.md  submit.cpp
Labs/二进制运算/: answer.cpp  guide.md  submit.cpp
Labs/作用域与命名空间/: answer.cpp  guide.md  submit.cpp
Labs/内存与指针/: answer.cpp  guide.md  submit.cpp
Labs/函数/: answer.cpp  guide.md  submit.cpp
Labs/单链表/: answer.cpp  guide.md  submit.cpp
Labs/参数传递/: answer.cpp  guide.md  submit.cpp
Labs/变量及其精度/: answer.cpp  guide.md  submit.cpp
Labs/条件与循环/: answer.cpp  guide.md  submit.cpp
Labs/类和对象/: answer.cpp  guide.md  submit.cpp
Labs/结构体/: answer.cpp  guide.md  submit.cpp
Labs/自定义排序/: answer.cpp  guide.md  submit.cpp
Labs/运算符重载/: answer.cpp  guide.md  submit.cpp
Snake/: README.md  index.html  plan.md  snake-game.js
Snake/css/: style.css
Snake/js/: food.js  (+3 more)
Suggest/: ipad.md
include/: Calculator.h
src/: Calculator.cpp
tests/: test_calculator.cpp
